--- a/scss/style.scss
+++ b/scss/style.scss
@@ -382,6 +382,7 @@ text-align: center;
             .partidos-sub{
                 display: flex;
                 justify-content: center;
+                text-align: center;
                 margin-top: 10px;
                 background-color: rgb(242, 215, 36);
                 width: 150px;
